--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -126,4 +126,22 @@ run-android-application = { id = "run.android.application", version = "unspecifi
 run-android-application-compose = { id = "run.android.application.compose", version = "unspecified" }
 run-android-library = { id = "run.android.library", version = "unspecified" }
 run-android-library-compose = { id = "run.android.library.compose", version = "unspecified" }
+run-android-feature-ui = { id = "run.android.feature.ui", version = "unspecified" }
+
+[bundles]
+compose = [
+    "androidx-activity-compose",
+    "androidx-lifecycle-runtime-compose",
+    "androidx-lifecycle-viewmodel-compose",
+    "androidx-compose-material3",
+    "androidx-compose-ui",
+    "androidx-compose-ui-graphics",
+    "androidx-compose-ui-tooling-preview",
+]
+compose-debug = [
+    "androidx-compose-ui-tooling",
+    "androidx-compose-ui-test-manifest",
+]
+koin = ["koin-core", "koin-android", "koin-android-workmanager"]
+koin-compose = ["koin-core", "koin-android", "koin-android-workmanager", "koin-androidx-compose"]
 
