--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -123,4 +123,7 @@ room = { id = "androidx.room", version.ref = "room" }
 androidDynamicFeature = { id = "com.android.dynamic-feature", version.ref = "agp" }
 mapsplatform-secrets-plugin = { id = "com.google.android.libraries.mapsplatform.secrets-gradle-plugin", version.ref = "secretsPlugin"}
 run-android-application = { id = "run.android.application", version = "unspecified" }
+run-android-application-compose = { id = "run.android.application.compose", version = "unspecified" }
+run-android-library = { id = "run.android.library", version = "unspecified" }
+run-android-library-compose = { id = "run.android.library.compose", version = "unspecified" }
 
